# Ethics-is-Efficient

./: .gitignore  BUILD.md  CONTAINER.md  Cargo.toml  Makefile  README.md  smoke-test.sh
.out/: card.json  run.json
container/: Dockerfile.distroless  Dockerfile.scratch
crates/tdln-bundle/: Cargo.toml
crates/tdln-bundle/src/: lib.rs
crates/tdln-core/: Cargo.toml
crates/tdln-core/src/: lib.rs
crates/tdln-wasm/: Cargo.toml
crates/tdln-wasm/src/: lib.rs
docs/: CATALOG_PAPERS.md  LLM_CONTEXT_STARTER.md  README.md
docs/papers/: PAPERS_MANIFEST.json  papers-catalog.ndjson
docs/papers/LogLine_Papers_v1.0.1/: 00_Prologue_Ethics_is_Efficient.md  01_From_Silicon_to_User.md  02_I_The_LogLine_Protocol.md  03_II_JSON_Atomic.md  04_III_LLLV.md  05_IV_TDLN.md  06_V_SIRP.md  08_Chip_as_Code.md  (+8 more)
examples/wasm/: README.md  run_ack.wasm  run_ask.wasm
guests/ack/: Cargo.toml
guests/ask/: Cargo.toml
keys/: README.md  privkey.hex  pubkey.hex
schemas/tdln/: trust@1.json
scripts/: README.md  build-papers.js  rename-amd64.sh
services/resolver/: Cargo.toml
services/resolver/src/: http.rs  lib.rs  main.rs  model.rs  store.rs
services/resolver/src/card/: detect.rs
tests/: e2e_resolver_smoke.sh
tools/tdln-verify/: Cargo.toml
tools/tdln-verify/src/: main.rs
website/: DEPLOY.md  _headers  _redirects  index.html
website/papers/: 00_Prologue_Ethics_is_Efficient.html  01_From_Silicon_to_User.html  02_I_The_LogLine_Protocol.html  03_II_JSON_Atomic.html  04_III_LLLV.html  05_IV_TDLN.html  06_V_SIRP.html  07_Hardware_as_Text_and_Power.html  08_Chip_as_Code.html
(+31 files in other folders)
