
[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
qrcode = "0.13"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tdln-core = { path = "../../crates/tdln-core" }
tdln-bundle = { path = "../../crates/tdln-bundle" }
tdln-wasm = { path = "../../crates/tdln-wasm" }
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = "2"
rand = "0.8"
jsonschema = "0.17"
base64 = "0.22"
anyhow = "1"
