
[package]
name = "tdln-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
ed25519-dalek = "2"
blake3 = "1"
tdln-core = { path = "../../crates/tdln-core" }
